--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
   "hostname": "AJKshell",
   "password": "12345",
   "social": {
-    "email": "suf.khan2000@email.com",
+    "email": "suf.khan2000@gmail.com",
     "github": "https://github.com/ajk-github",
     "linkedin": "https://www.linkedin.com/in/abdul-jaleel-khan/"
   },
