--- a/config.json
+++ b/config.json
@@ -41,7 +41,7 @@
       },
       {
         "name": "Street-Fighter",
-        "url": "/StreetFighter-master/index.html",
+        "url": "/Secret-Game2/index.html",
         "width": "1400",
         "height": "560"
       },
